fixed map overlapping with navbar

--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ header{
     display: flexbox;
     position: fixed;
     width: 100%;
-
+    z-index: 9999;
 }
 
 
